修复StateException('Interruptingcow can only be used from the MainThread.')

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
@@ -17,19 +17,20 @@
    },
    "outputs": [],
    "source": [
-    "def run_ksrpc():\n",
-    "    print(\"启动ksrpc服务\")\n",
+    "def run_clear():\n",
+    "    print(\"启动定时清屏\")\n",
     "    \n",
-    "    from ksrpc import config\n",
-    "    config.PORT = 8000\n",
-    "\n",
-    "    from ksrpc.app import simple_\n",
-    "    simple_.main()"
+    "    import time\n",
+    "    from IPython.display import clear_output\n",
+    "    \n",
+    "    while True:\n",
+    "        time.sleep(30)\n",
+    "        clear_output(wait=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
@@ -38,97 +39,90 @@
    "outputs": [],
    "source": [
     "def run_frpc():\n",
-    "    print(\"启动frpc服务\")\n",
+    "    print(\"启动 frpc 服务...\")\n",
     "    \n",
     "    import subprocess\n",
-    "    import threading\n",
-    "\n",
-    "    # 读取流的函数\n",
-    "    def read_stream(stream, prefix):\n",
-    "        for line in stream:\n",
-    "            print(f\"[{prefix}] {line.strip()}\")\n",
-    "\n",
-    "    # 启动进程\n",
-    "    process = subprocess.Popen(\n",
-    "        ['./frpc', '-c', './frpc.toml'],\n",
-    "        stdout=subprocess.PIPE,\n",
-    "        stderr=subprocess.PIPE,\n",
-    "        universal_newlines=True,\n",
-    "        bufsize=1   # 行缓冲，实时输出\n",
-    "    )\n",
-    "\n",
-    "    # 创建并启动线程\n",
-    "    threads = [\n",
-    "        threading.Thread(target=read_stream, args=(process.stdout, \"STDOUT\")),\n",
-    "        threading.Thread(target=read_stream, args=(process.stderr, \"STDERR\"))\n",
-    "    ]\n",
-    "    \n",
-    "    for thread in threads:\n",
-    "        thread.daemon = True  # 设置为守护线程，主线程结束时自动退出\n",
-    "        thread.start()\n",
-    "\n",
     "    try:\n",
+    "        # 使用 subprocess 运行外部命令\n",
+    "        process = subprocess.Popen(\n",
+    "            [\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
+    "            stdout=subprocess.PIPE,\n",
+    "            stderr=subprocess.PIPE,\n",
+    "            universal_newlines=True,\n",
+    "        )\n",
+    "        \n",
+    "        # 实时输出日志\n",
+    "        while True:\n",
+    "            output = process.stdout.readline()\n",
+    "            if output == '' and process.poll() is not None:\n",
+    "                break\n",
+    "            if output:\n",
+    "                print(output.strip())\n",
+    "                \n",
     "        # 等待进程结束\n",
-    "        return_code = process.wait()\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(\"\\n用户中断，终止进程...\")\n",
-    "        process.terminate()\n",
-    "        return_code = process.wait()\n",
+    "        process.wait()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"frpc 服务启动失败: {e}\")\n",
     "    finally:\n",
-    "        # 等待线程结束（守护线程会在进程结束后自动退出）\n",
-    "        for thread in threads:\n",
-    "            thread.join(timeout=1)  # 设置超时防止永久阻塞\n",
-    "\n",
-    "    # 检查返回码\n",
-    "    if return_code != 0:\n",
-    "        print(f\"命令执行出错，返回码: {return_code}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "def background_clear():\n",
-    "    print(\"启动定时清屏\")\n",
-    "    \n",
-    "    import time\n",
-    "    from IPython.display import clear_output\n",
-    "    \n",
-    "    while True:\n",
-    "        time.sleep(15)\n",
-    "        clear_output(wait=True)"
+    "        print(\"frpc 服务已终止\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "import concurrent.futures\n",
-    "\n",
-    "async def main():\n",
-    "    # 获取事件循环\n",
-    "    try:\n",
-    "        loop = asyncio.get_running_loop()  # Python 3.7+\n",
-    "    except AttributeError:\n",
-    "        loop = asyncio.get_event_loop()    # Python 3.6 及更早版本\n",
+    "def run_ksrpc():\n",
+    "    print(\"启动 ksrpc 服务\")\n",
     "    \n",
-    "    # 并行执行两个函数\n",
-    "    with concurrent.futures.ThreadPoolExecutor() as pool:\n",
-    "        await asyncio.gather(\n",
-    "            loop.run_in_executor(pool, run_ksrpc),\n",
-    "            loop.run_in_executor(pool, run_frpc),\n",
-    "            loop.run_in_executor(pool, background_clear),\n",
-    "        )\n",
+    "    from ksrpc import config\n",
+    "    config.PORT = 8000\n",
+    "    \n",
+    "    # 必须在主线程中使用，否则调用的部分API可能失败。所以要线程中使用\n",
+    "    from ksrpc.app import simple_\n",
+    "    simple_.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import multiprocessing\n",
+    "from contextlib import contextmanager\n",
     "\n",
-    "# Jupyter 中直接运行异步函数\n",
-    "await main()"
+    "@contextmanager\n",
+    "def process_manager(*processes):\n",
+    "    try:\n",
+    "        for p in processes:\n",
+    "            p.start()\n",
+    "        yield\n",
+    "    finally:\n",
+    "        for p in processes:\n",
+    "            if p.is_alive():\n",
+    "                p.terminate()\n",
+    "                p.join()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    p1 = multiprocessing.Process(target=run_ksrpc)\n",
+    "    p2 = multiprocessing.Process(target=run_frpc)\n",
+    "    p3 = multiprocessing.Process(target=run_clear)\n",
+    "    \n",
+    "    with process_manager(p1, p2, p3):\n",
+    "        p1.join()\n",
+    "        p2.join()\n",
+    "        p3.join()"
    ]
   }
  ],
