清理异常输出

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -11,35 +11,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "def run_clear():\n",
-    "    print(\"启动定时清屏\")\n",
+    "    print(\"启动 定时清屏\")\n",
     "    \n",
     "    import time\n",
     "    from IPython.display import clear_output\n",
     "    \n",
-    "    while True:\n",
-    "        time.sleep(30)\n",
-    "        clear_output(wait=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "    try:\n",
+    "        while True:\n",
+    "            time.sleep(30)\n",
+    "            clear_output(wait=True)\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"定时清屏 已中断\")\n",
+    "    finally:\n",
+    "        print(\"定时清屏 服务已终止\")\n",
+    "        \n",
     "def run_frpc():\n",
-    "    print(\"启动 frpc 服务...\")\n",
+    "    print(\"启动 frpc 服务\")\n",
     "    \n",
     "    import subprocess\n",
     "    try:\n",
@@ -61,68 +53,82 @@
     "                \n",
     "        # 等待进程结束\n",
     "        process.wait()\n",
-    "        \n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"frpc 已中断\")\n",
     "    except Exception as e:\n",
-    "        print(f\"frpc 服务启动失败: {e}\")\n",
+    "        print(\"frpc 服务启动失败: \", e)\n",
     "    finally:\n",
-    "        print(\"frpc 服务已终止\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "        print(\"frpc 服务已终止\")\n",
+    "        \n",
     "def run_ksrpc():\n",
     "    print(\"启动 ksrpc 服务\")\n",
-    "    \n",
+    "    import multiprocessing\n",
+    "    import time\n",
+    "\n",
     "    from ksrpc import config\n",
     "    config.PORT = 8000\n",
     "    \n",
-    "    # 必须在主线程中使用，否则调用的部分API可能失败。所以要线程中使用\n",
-    "    from ksrpc.app import simple_\n",
-    "    simple_.main()"
+    "    try:\n",
+    "        # 使用轮询机制检查退出标志\n",
+    "        from ksrpc.app import simple_\n",
+    "        simple_.main()\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"ksrpc 已中断\")\n",
+    "    except Exception as e:\n",
+    "        print(\"ksrpc 服务启动失败: \", e)\n",
+    "    finally:\n",
+    "        print(\"ksrpc 服务已终止\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "import multiprocessing\n",
+    "import time\n",
     "from contextlib import contextmanager\n",
     "\n",
     "@contextmanager\n",
     "def process_manager(*processes):\n",
     "    try:\n",
+    "        # 添加退出标志\n",
+    "        exit_flag = multiprocessing.Value('b', False)\n",
     "        for p in processes:\n",
+    "            p.exit_flag = exit_flag  # 动态添加共享标志\n",
     "            p.start()\n",
     "        yield\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"\\n收到终止信号，关闭子进程...\")\n",
+    "        exit_flag.value = True  # 通知子进程退出\n",
+    "        time.sleep(1)  # 给子进程时间处理\n",
     "    finally:\n",
     "        for p in processes:\n",
     "            if p.is_alive():\n",
+    "                print(f\"强制终止 {p.name}\")\n",
     "                p.terminate()\n",
-    "                p.join()\n",
+    "            p.join(timeout=1.0)\n",
+    "            if p.is_alive():\n",
+    "                print(f\"警告: {p.name} 未能正常终止\")\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    p1 = multiprocessing.Process(target=run_ksrpc)\n",
-    "    p2 = multiprocessing.Process(target=run_frpc)\n",
-    "    p3 = multiprocessing.Process(target=run_clear)\n",
+    "    # 创建进程时指定名称便于调试\n",
+    "    p1 = multiprocessing.Process(target=run_ksrpc, name=\"ksrpc\")\n",
+    "    p2 = multiprocessing.Process(target=run_frpc, name=\"frpc\")\n",
+    "    p3 = multiprocessing.Process(target=run_clear, name=\"clear\")\n",
     "    \n",
-    "    with process_manager(p1, p2, p3):\n",
-    "        p1.join()\n",
-    "        p2.join()\n",
-    "        p3.join()"
+    "    try:\n",
+    "        with process_manager(p1, p2, p3):\n",
+    "            # 主线程只需等待，由process_manager处理退出\n",
+    "            while True:\n",
+    "                time.sleep(2)\n",
+    "    except Exception as e:\n",
+    "        print(f\"主进程错误: {e}\")\n",
+    "    finally:\n",
+    "        print(\"所有服务已关闭\")"
    ]
   }
  ],
