--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -11,80 +11,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
-    "def run_clear():\n",
-    "    print(\"启动 定时清屏\")\n",
-    "    \n",
-    "    import time\n",
+    "def run_command(args):\n",
+    "    import select\n",
+    "    import subprocess\n",
     "    from IPython.display import clear_output\n",
     "    \n",
     "    try:\n",
-    "        while True:\n",
-    "            time.sleep(30)\n",
-    "            clear_output(wait=True)\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(\"定时清屏 已中断\")\n",
-    "    finally:\n",
-    "        print(\"定时清屏 服务已终止\")\n",
-    "        \n",
-    "def run_frpc():\n",
-    "    print(\"启动 frpc 服务\")\n",
-    "    \n",
-    "    import subprocess\n",
-    "    try:\n",
     "        # 使用 subprocess 运行外部命令\n",
     "        process = subprocess.Popen(\n",
-    "            [\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
+    "            args,\n",
     "            stdout=subprocess.PIPE,\n",
     "            stderr=subprocess.PIPE,\n",
     "            universal_newlines=True,\n",
     "        )\n",
-    "        \n",
+    "        i = 0\n",
     "        # 实时输出日志\n",
-    "        while True:\n",
-    "            output = process.stdout.readline()\n",
-    "            if output == '' and process.poll() is not None:\n",
-    "                break\n",
-    "            if output:\n",
-    "                print(output.strip())\n",
+    "        while process.poll() is None:\n",
+    "            # 检查 stdout/stderr 是否有数据\n",
+    "            rlist, _, _ = select.select([process.stdout, process.stderr], [], [], 0.1)\n",
+    "            for stream in rlist:\n",
+    "                line = stream.readline()\n",
+    "                if line:\n",
+    "                    i+=1\n",
+    "                    if i%100==0:\n",
+    "                        clear_output(wait=True)\n",
+    "                    print(line.strip())\n",
     "                \n",
     "        # 等待进程结束\n",
     "        process.wait()\n",
     "    except KeyboardInterrupt:\n",
-    "        print(\"frpc 已中断\")\n",
+    "        print(args, \"已中断\")\n",
     "    except Exception as e:\n",
-    "        print(\"frpc 服务启动失败: \", e)\n",
+    "        print(args, \"启动失败: \", e)\n",
     "    finally:\n",
-    "        print(\"frpc 服务已终止\")\n",
-    "        \n",
-    "def run_ksrpc():\n",
-    "    print(\"启动 ksrpc 服务\")\n",
-    "    import multiprocessing\n",
-    "    import time\n",
-    "\n",
-    "    from ksrpc import config\n",
-    "    config.PORT = 8000\n",
-    "    \n",
-    "    try:\n",
-    "        # 使用轮询机制检查退出标志\n",
-    "        from ksrpc.app import simple_\n",
-    "        simple_.main()\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(\"ksrpc 已中断\")\n",
-    "    except Exception as e:\n",
-    "        print(\"ksrpc 服务启动失败: \", e)\n",
-    "    finally:\n",
-    "        print(\"ksrpc 服务已终止\")"
+    "        print(args, \"已终止\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -95,15 +70,11 @@
     "@contextmanager\n",
     "def process_manager(*processes):\n",
     "    try:\n",
-    "        # 添加退出标志\n",
-    "        exit_flag = multiprocessing.Value('b', False)\n",
     "        for p in processes:\n",
-    "            p.exit_flag = exit_flag  # 动态添加共享标志\n",
     "            p.start()\n",
     "        yield\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"\\n收到终止信号，关闭子进程...\")\n",
-    "        exit_flag.value = True  # 通知子进程退出\n",
     "        time.sleep(1)  # 给子进程时间处理\n",
     "    finally:\n",
     "        for p in processes:\n",
@@ -116,12 +87,11 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    # 创建进程时指定名称便于调试\n",
-    "    p1 = multiprocessing.Process(target=run_ksrpc, name=\"ksrpc\")\n",
-    "    p2 = multiprocessing.Process(target=run_frpc, name=\"frpc\")\n",
-    "    p3 = multiprocessing.Process(target=run_clear, name=\"clear\")\n",
+    "    p1 = multiprocessing.Process(target=lambda :run_command([\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
+    "    p2 = multiprocessing.Process(target=lambda :run_command([\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
     "    \n",
     "    try:\n",
-    "        with process_manager(p1, p2, p3):\n",
+    "        with process_manager(p1, p2):\n",
     "            # 主线程只需等待，由process_manager处理退出\n",
     "            while True:\n",
     "                time.sleep(2)\n",
@@ -130,6 +100,13 @@
     "    finally:\n",
     "        print(\"所有服务已关闭\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
