输出添加标识，用于区分日志

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "def run_command(args):\n",
+    "def run_command(name, args):\n",
     "    import select\n",
     "    import subprocess\n",
     "    from IPython.display import clear_output\n",
@@ -41,7 +41,7 @@
     "                    i += 1\n",
     "                    if i % 100 == 0:\n",
     "                        clear_output(wait=True)\n",
-    "                    print(line.strip())\n",
+    "                    print(name, line.strip())\n",
     "\n",
     "        # 等待进程结束\n",
     "        process.wait()\n",
@@ -89,8 +89,8 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    # 创建进程时指定名称便于调试\n",
-    "    p1 = multiprocessing.Process(target=lambda: run_command([\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
-    "    p2 = multiprocessing.Process(target=lambda: run_command([\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
+    "    p1 = multiprocessing.Process(target=lambda: run_command('ksrpc |', [\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
+    "    p2 = multiprocessing.Process(target=lambda: run_command('frpc |', [\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
     "\n",
     "    try:\n",
     "        with process_manager(p1, p2):\n",
