加上定时退出功能

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -17,10 +17,16 @@
    },
    "outputs": [],
    "source": [
+    "def run_ksrpc():\n",
+    "    from ksrpc import config\n",
+    "    config.PORT = 8000\n",
+    "\n",
+    "    from ksrpc.app import simple_\n",
+    "    simple_.main()\n",
+    "\n",
     "def run_command(name, args):\n",
     "    import select\n",
     "    import subprocess\n",
-    "    from IPython.display import clear_output\n",
     "\n",
     "    try:\n",
     "        # 使用 subprocess 运行外部命令\n",
@@ -30,7 +36,7 @@
     "            stderr=subprocess.PIPE,\n",
     "            universal_newlines=True,\n",
     "        )\n",
-    "        i = 0\n",
+    "\n",
     "        # 实时输出日志\n",
     "        while process.poll() is None:\n",
     "            # 检查 stdout/stderr 是否有数据\n",
@@ -38,9 +44,6 @@
     "            for stream in rlist:\n",
     "                line = stream.readline()\n",
     "                if line:\n",
-    "                    i += 1\n",
-    "                    if i % 100 == 0:\n",
-    "                        clear_output(wait=True)\n",
     "                    print(name, \"|\", line.strip())\n",
     "\n",
     "        # 等待进程结束\n",
@@ -50,57 +53,64 @@
     "    except Exception as e:\n",
     "        print(args, \"启动失败: \", e)\n",
     "    finally:\n",
-    "        print(args, \"已终止\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import multiprocessing\n",
-    "import time\n",
-    "from contextlib import contextmanager\n",
+    "        print(args, \"已终止\")\n",
     "\n",
+    "class ProcessManager:\n",
+    "    def __init__(self, *processes):\n",
+    "        self.processes = processes\n",
     "\n",
-    "@contextmanager\n",
-    "def process_manager(*processes):\n",
-    "    try:\n",
-    "        for p in processes:\n",
+    "    def __enter__(self):\n",
+    "        for p in self.processes:\n",
     "            p.start()\n",
-    "        yield\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(\"\\n收到终止信号，关闭子进程...\")\n",
-    "        time.sleep(1)  # 给子进程时间处理\n",
-    "    finally:\n",
-    "        for p in processes:\n",
-    "            if p.is_alive():\n",
-    "                print(f\"强制终止 {p.name}\")\n",
-    "                p.terminate()\n",
-    "            p.join(timeout=1.0)\n",
-    "            if p.is_alive():\n",
-    "                print(f\"警告: {p.name} 未能正常终止\")\n",
+    "            print(f\"Started process: {p.name} (PID: {p.pid})\")\n",
+    "        return self\n",
     "\n",
+    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+    "        print(\"Terminating processes...\")\n",
+    "        import os\n",
+    "        import signal\n",
+    "\n",
+    "        for p in self.processes:\n",
+    "            if p.is_alive():\n",
+    "                print(f\"Terminating {p.name} (PID: {p.pid})\")\n",
+    "                p.terminate()  # 发送SIGTERM\n",
+    "                p.join(timeout=3)  # 等待5秒\n",
+    "                if p.is_alive():\n",
+    "                    print(f\"Force killing {p.name} (PID: {p.pid})\")\n",
+    "                    os.kill(p.pid, signal.SIGKILL)  # 强制终止\n",
+    "                    p.join()\n",
+    "        print(\"All processes terminated\")\n",
+    "        return False  # 不抑制异常\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    # 创建进程时指定名称便于调试\n",
-    "    p1 = multiprocessing.Process(target=lambda: run_command('ksrpc', [\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
-    "    p2 = multiprocessing.Process(target=lambda: run_command('frpc', [\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
+    "    import multiprocessing\n",
+    "    import time\n",
+    "    from IPython.display import clear_output\n",
     "\n",
+    "    p1 = multiprocessing.Process(target=run_ksrpc, args=(), name=\"ksrpc\")\n",
+    "    # p1 = multiprocessing.Process(target=run_command, args=('ksrpc', [\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
+    "    p2 = multiprocessing.Process(target=run_command, args=('frpc', [\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
+    "\n",
+    "    start_time = time.perf_counter()\n",
     "    try:\n",
-    "        with process_manager(p1, p2):\n",
-    "            # 主线程只需等待，由process_manager处理退出\n",
+    "        ELAPSE = 60*10\n",
+    "        print(f\"!!!防止长期占用资源，从开启服务时计算，{round(ELAPSE/60)}分钟后将退出!!!\")\n",
+    "        with ProcessManager(p1, p2):\n",
     "            while True:\n",
-    "                time.sleep(2)\n",
+    "                end_time = time.perf_counter()\n",
+    "                if end_time - start_time > ELAPSE:\n",
+    "                    print(f\"!!! {round(ELAPSE/60)}分钟已到，退出!!!\")\n",
+    "                    break\n",
+    "                time.sleep(5)\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"主进程已中断\")\n",
     "    except Exception as e:\n",
-    "        print(f\"主进程错误: {e}\")\n",
+    "        print(\"主进程错误: \", e)\n",
     "    finally:\n",
-    "        print(\"所有服务已关闭\")"
+    "        print(\"所有服务已关闭\")\n",
+    "        from IPython.display import display, Javascript\n",
+    "        display(Javascript('IPython.notebook.kernel.interrupt()'))\n",
+    "        print(\"中断内核\")"
    ]
   }
  ],
