加入定时清理功能

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -24,6 +24,7 @@
     "    from ksrpc.app import simple_\n",
     "    simple_.main()\n",
     "\n",
+    "\n",
     "def run_command(name, args):\n",
     "    import select\n",
     "    import subprocess\n",
@@ -55,6 +56,7 @@
     "    finally:\n",
     "        print(args, \"已终止\")\n",
     "\n",
+    "\n",
     "class ProcessManager:\n",
     "    def __init__(self, *processes):\n",
     "        self.processes = processes\n",
@@ -82,9 +84,11 @@
     "        print(\"All processes terminated\")\n",
     "        return False  # 不抑制异常\n",
     "\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    import multiprocessing\n",
     "    import time\n",
+    "    from datetime import datetime\n",
     "    from IPython.display import clear_output\n",
     "\n",
     "    p1 = multiprocessing.Process(target=run_ksrpc, args=(), name=\"ksrpc\")\n",
@@ -93,15 +97,19 @@
     "\n",
     "    start_time = time.perf_counter()\n",
     "    try:\n",
-    "        ELAPSE = 60*10\n",
-    "        print(f\"!!!防止长期占用资源，从开启服务时计算，{round(ELAPSE/60)}分钟后将退出!!!\")\n",
+    "        ELAPSE = 60 * 10\n",
+    "        print(f\"{datetime.now()} | !!!防止长期占用资源，从开启服务时计算，{round(ELAPSE / 60)}分钟后将退出!!!\")\n",
+    "        i = 0\n",
     "        with ProcessManager(p1, p2):\n",
     "            while True:\n",
     "                end_time = time.perf_counter()\n",
     "                if end_time - start_time > ELAPSE:\n",
-    "                    print(f\"!!! {round(ELAPSE/60)}分钟已到，退出!!!\")\n",
+    "                    print(f\"{datetime.now()} | !!!{round(ELAPSE / 60)}分钟已到，退出!!!\")\n",
     "                    break\n",
     "                time.sleep(5)\n",
+    "                i += 1\n",
+    "                if i % 30 == 0:  # 清理可以改成0，不清理改成-1\n",
+    "                    clear_output(wait=True)\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"主进程已中断\")\n",
     "    except Exception as e:\n",
@@ -109,6 +117,7 @@
     "    finally:\n",
     "        print(\"所有服务已关闭\")\n",
     "        from IPython.display import display, Javascript\n",
+    "\n",
     "        display(Javascript('IPython.notebook.kernel.interrupt()'))\n",
     "        print(\"中断内核\")"
    ]
