内存释放测试

--- a/examples_frp/ksrpc.ipynb
+++ b/examples_frp/ksrpc.ipynb
@@ -33,7 +33,7 @@
     "config.PORT = 8000\n",
     "\n",
     "from ksrpc.app import simple_\n",
-    "simple_.main()"
+    "simple_.main(fork=True)"
    ]
   }
  ],
