--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -22,7 +22,7 @@
     "    config.PORT = 8000\n",
     "\n",
     "    from ksrpc.app import simple_\n",
-    "    simple_.main()\n",
+    "    simple_.main(fork=True)\n",
     "\n",
     "\n",
     "def run_command(name, args):\n",
