重构进程标准输出的清理与定时

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -17,109 +17,74 @@
    },
    "outputs": [],
    "source": [
-    "def run_ksrpc():\n",
-    "    from ksrpc import config\n",
-    "    config.PORT = 8000\n",
+    "import multiprocessing\n",
+    "import time\n",
     "\n",
-    "    from ksrpc.app import simple_\n",
-    "    simple_.main(fork=True)\n",
+    "from IPython.display import clear_output\n",
+    "from IPython.display import display, Javascript\n",
+    "\n",
+    "from ksrpc.utils.process import run_command, ProcessManager\n",
     "\n",
     "\n",
-    "def run_command(name, args):\n",
-    "    import select\n",
-    "    import subprocess\n",
+    "def callback(process_name, stream_type, line, shared_time, shared_count):\n",
+    "    # 更新共享变量\n",
+    "    with shared_time.get_lock():\n",
+    "        shared_time.value = time.perf_counter()\n",
+    "    with shared_count.get_lock():\n",
+    "        i = shared_count.value + 1\n",
+    "        shared_count.value = i\n",
+    "\n",
+    "    if i % 50 == 0:\n",
+    "        clear_output(wait=True)\n",
+    "    print(f\"[{stream_type}] {process_name}: {line}\")\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    # 创建共享变量 (使用'd'表示双精度浮点数)\n",
+    "    shared_time = multiprocessing.Value('d', time.perf_counter())\n",
+    "    shared_count = multiprocessing.Value('i', 0)\n",
+    "\n",
+    "    # 创建新回调函数绑定共享变量\n",
+    "    def wrapped_callback(*args):\n",
+    "        callback(*args, shared_time, shared_count)\n",
+    "\n",
+    "    p1 = multiprocessing.Process(target=run_command, name=\"ksrpc\",\n",
+    "                                 args=([\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"],\n",
+    "                                       wrapped_callback))\n",
+    "    p2 = multiprocessing.Process(target=run_command, name=\"frpc\",\n",
+    "                                 args=([\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
+    "                                       wrapped_callback))\n",
     "\n",
     "    try:\n",
-    "        # 使用 subprocess 运行外部命令\n",
-    "        process = subprocess.Popen(\n",
-    "            args,\n",
-    "            stdout=subprocess.PIPE,\n",
-    "            stderr=subprocess.PIPE,\n",
-    "            universal_newlines=True,\n",
-    "        )\n",
-    "\n",
-    "        # 实时输出日志\n",
-    "        while process.poll() is None:\n",
-    "            # 检查 stdout/stderr 是否有数据\n",
-    "            rlist, _, _ = select.select([process.stdout, process.stderr], [], [], 0.1)\n",
-    "            for stream in rlist:\n",
-    "                line = stream.readline()\n",
-    "                if line:\n",
-    "                    print(name, \"|\", line.strip())\n",
-    "\n",
-    "        # 等待进程结束\n",
-    "        process.wait()\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(args, \"已中断\")\n",
-    "    except Exception as e:\n",
-    "        print(args, \"启动失败: \", e)\n",
-    "    finally:\n",
-    "        print(args, \"已终止\")\n",
-    "\n",
-    "\n",
-    "class ProcessManager:\n",
-    "    def __init__(self, *processes):\n",
-    "        self.processes = processes\n",
-    "\n",
-    "    def __enter__(self):\n",
-    "        for p in self.processes:\n",
-    "            p.start()\n",
-    "            print(f\"Started process: {p.name} (PID: {p.pid})\")\n",
-    "        return self\n",
-    "\n",
-    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-    "        print(\"Terminating processes...\")\n",
-    "        import os\n",
-    "        import signal\n",
-    "\n",
-    "        for p in self.processes:\n",
-    "            if p.is_alive():\n",
-    "                print(f\"Terminating {p.name} (PID: {p.pid})\")\n",
-    "                p.terminate()  # 发送SIGTERM\n",
-    "                p.join(timeout=3)  # 等待5秒\n",
-    "                if p.is_alive():\n",
-    "                    print(f\"Force killing {p.name} (PID: {p.pid})\")\n",
-    "                    os.kill(p.pid, signal.SIGKILL)  # 强制终止\n",
-    "                    p.join()\n",
-    "        print(\"All processes terminated\")\n",
-    "        return False  # 不抑制异常\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    import multiprocessing\n",
-    "    import time\n",
-    "    from datetime import datetime\n",
-    "    from IPython.display import clear_output\n",
-    "\n",
-    "    p1 = multiprocessing.Process(target=run_ksrpc, args=(), name=\"ksrpc\")\n",
-    "    # p1 = multiprocessing.Process(target=run_command, args=('ksrpc', [\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"]), name=\"ksrpc\")\n",
-    "    p2 = multiprocessing.Process(target=run_command, args=('frpc', [\"./frpc\", \"-c\", \"./frpc.toml\"]), name=\"frpc\")\n",
-    "\n",
-    "    start_time = time.perf_counter()\n",
-    "    try:\n",
-    "        ELAPSE = 60 * 10\n",
-    "        print(f\"{datetime.now()} | !!!防止长期占用资源，从开启服务时计算，{round(ELAPSE / 60)}分钟后将退出!!!\")\n",
-    "        i = 0\n",
+    "        ELAPSE = 60 * 5\n",
+    "        print(f\"!!!注意：空闲 {ELAPSE} 秒后，应用将退出!!!\")\n",
     "        with ProcessManager(p1, p2):\n",
     "            while True:\n",
-    "                end_time = time.perf_counter()\n",
-    "                if end_time - start_time > ELAPSE:\n",
-    "                    print(f\"{datetime.now()} | !!!{round(ELAPSE / 60)}分钟已到，退出!!!\")\n",
+    "                current_time = time.perf_counter()\n",
+    "                # 读取共享变量值\n",
+    "                with shared_time.get_lock():\n",
+    "                    last_activity = shared_time.value\n",
+    "\n",
+    "                print(f\"最后活动时间: {last_activity:.0f}, \"\n",
+    "                      f\"当前时间: {current_time:.0f}, \"\n",
+    "                      f\"空闲时间: {current_time - last_activity:-3.0f}/{ELAPSE}\")\n",
+    "\n",
+    "                if current_time - last_activity > ELAPSE:\n",
+    "                    print(\"!!!空闲时间到，退出!!!\")\n",
     "                    break\n",
-    "                time.sleep(5)\n",
-    "                i += 1\n",
-    "                if i % 30 == 0:  # 清理可以改成0，不清理改成-1\n",
-    "                    clear_output(wait=True)\n",
+    "                time.sleep(15)\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"主进程已中断\")\n",
     "    except Exception as e:\n",
     "        print(\"主进程错误: \", e)\n",
     "    finally:\n",
     "        print(\"所有服务已关闭\")\n",
-    "        from IPython.display import display, Javascript\n",
-    "\n",
     "        display(Javascript('IPython.notebook.kernel.interrupt()'))\n",
-    "        print(\"中断内核\")"
+    "        print(\"中断内核\")\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   }
  ],
