日志添加彩色输出

--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -34,9 +34,29 @@
     "        i = shared_count.value + 1\n",
     "        shared_count.value = i\n",
     "\n",
+    "    # 定义颜色代码\n",
+    "    RESET = \"\\033[0m\"\n",
+    "    BOLD = \"\\033[1m\"\n",
+    "    RED = \"\\033[31m\"\n",
+    "    GREEN = \"\\033[32m\"\n",
+    "    CYAN = \"\\033[36m\"\n",
+    "\n",
+    "    # 根据流类型设置颜色\n",
+    "    if stream_type == \"stdout\":\n",
+    "        color = GREEN\n",
+    "    elif stream_type == \"stderr\":\n",
+    "        color = RED\n",
+    "    else:\n",
+    "        color = CYAN\n",
+    "\n",
+    "    # 创建带颜色的输出\n",
+    "    colored_line = f\"{BOLD}{color}[{stream_type}]{RESET} {process_name}: {line}\"\n",
+    "\n",
+    "    # 每50条清屏一次\n",
     "    if i % 50 == 0:\n",
     "        clear_output(wait=True)\n",
-    "    print(f\"[{stream_type}] {process_name}: {line}\")\n",
+    "\n",
+    "    print(colored_line)\n",
     "\n",
     "\n",
     "def main():\n",
