--- a/examples_frp/frpc.ipynb
+++ b/examples_frp/frpc.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 修改权限\n",
+    "# 先上传frpc，然后修改权限\n",
     "!chmod 777 frpc"
    ]
   },
