--- a/examples_frp/ksrpc.ipynb
+++ b/examples_frp/ksrpc.ipynb
@@ -16,24 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 此方法脱离了Notebook环境，导致部分函数调用失败，请用下一个单元格中的代码\n",
-    "# !python -m ksrpc.run_simple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# 运行HTTP服务。如果出现多次启动端口被占用的情况，请“重启内核”\n",
-    "from ksrpc import config\n",
-    "config.PORT = 8000\n",
-    "\n",
-    "from ksrpc.app import simple_\n",
-    "simple_.main(fork=True)"
+    "# 注意：无崩溃后拉起功能\n",
+    "!python -m ksrpc.run_app"
    ]
   }
  ],
