--- a/examples_frp/ksrpc_frpc.ipynb
+++ b/examples_frp/ksrpc_frpc.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 合并ksrpc+frpc两阻塞代码于单Notebook"
+    "# 合并ksrpc+frpc两阻塞代码于单Notebook\n",
+    "1. 支持子程序崩溃重新拉起\n",
+    "2. 支持空闲超时停止服务\n",
+    "3. 支持日志超长清屏"
    ]
   },
   {
@@ -17,94 +20,13 @@
    },
    "outputs": [],
    "source": [
-    "import multiprocessing\n",
-    "import time\n",
+    "from ksrpc.run_notebook import main\n",
     "\n",
-    "from IPython.display import clear_output\n",
-    "from IPython.display import display, Javascript\n",
-    "\n",
-    "from ksrpc.utils.process import run_command, ProcessManager\n",
-    "\n",
-    "\n",
-    "def callback(process_name, stream_type, line, shared_time, shared_count):\n",
-    "    # 更新共享变量\n",
-    "    with shared_time.get_lock():\n",
-    "        shared_time.value = time.perf_counter()\n",
-    "    with shared_count.get_lock():\n",
-    "        i = shared_count.value + 1\n",
-    "        shared_count.value = i\n",
-    "\n",
-    "    # 定义颜色代码\n",
-    "    RESET = \"\\033[0m\"\n",
-    "    BOLD = \"\\033[1m\"\n",
-    "    RED = \"\\033[31m\"\n",
-    "    GREEN = \"\\033[32m\"\n",
-    "    CYAN = \"\\033[36m\"\n",
-    "\n",
-    "    # 根据流类型设置颜色\n",
-    "    if stream_type == \"stdout\":\n",
-    "        color = GREEN\n",
-    "    elif stream_type == \"stderr\":\n",
-    "        color = RED\n",
-    "    else:\n",
-    "        color = CYAN\n",
-    "\n",
-    "    # 创建带颜色的输出\n",
-    "    colored_line = f\"{BOLD}{color}[{stream_type}]{RESET} {process_name}: {line}\"\n",
-    "\n",
-    "    # 每50条清屏一次\n",
-    "    if i % 50 == 0:\n",
-    "        clear_output(wait=True)\n",
-    "\n",
-    "    print(colored_line)\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    # 创建共享变量 (使用'd'表示双精度浮点数)\n",
-    "    shared_time = multiprocessing.Value('d', time.perf_counter())\n",
-    "    shared_count = multiprocessing.Value('i', 0)\n",
-    "\n",
-    "    # 创建新回调函数绑定共享变量\n",
-    "    def wrapped_callback(*args):\n",
-    "        callback(*args, shared_time, shared_count)\n",
-    "\n",
-    "    p1 = multiprocessing.Process(target=run_command, name=\"ksrpc\",\n",
-    "                                 args=([\"python\", \"-u\", \"-m\", \"ksrpc.run_simple\"],\n",
-    "                                       wrapped_callback))\n",
-    "    p2 = multiprocessing.Process(target=run_command, name=\"frpc\",\n",
-    "                                 args=([\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
-    "                                       wrapped_callback))\n",
-    "\n",
-    "    try:\n",
-    "        ELAPSE = 60 * 5\n",
-    "        print(f\"!!!注意：空闲 {ELAPSE} 秒后，应用将退出!!!\")\n",
-    "        with ProcessManager(p1, p2):\n",
-    "            while True:\n",
-    "                current_time = time.perf_counter()\n",
-    "                # 读取共享变量值\n",
-    "                with shared_time.get_lock():\n",
-    "                    last_activity = shared_time.value\n",
-    "\n",
-    "                print(f\"最后活动时间: {last_activity:.0f}, \"\n",
-    "                      f\"当前时间: {current_time:.0f}, \"\n",
-    "                      f\"空闲时间: {current_time - last_activity:-3.0f}/{ELAPSE}\")\n",
-    "\n",
-    "                if current_time - last_activity > ELAPSE:\n",
-    "                    print(\"!!!空闲时间到，退出!!!\")\n",
-    "                    break\n",
-    "                time.sleep(15)\n",
-    "    except KeyboardInterrupt:\n",
-    "        print(\"主进程已中断\")\n",
-    "    except Exception as e:\n",
-    "        print(\"主进程错误: \", e)\n",
-    "    finally:\n",
-    "        print(\"所有服务已关闭\")\n",
-    "        display(Javascript('IPython.notebook.kernel.interrupt()'))\n",
-    "        print(\"中断内核\")\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
+    "commands = {\n",
+    "    \"ksrpc\": [\"python\", \"-u\", \"-m\", \"ksrpc.run_app\"],\n",
+    "    \"frpc\": [\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
+    "}\n",
+    "main(commands, idle_timeout=300, clear_count=35)"
    ]
   }
  ],
