ksrpc主进程版中断不释放问题

--- a/examples_frp/ksrpc_frpc2.ipynb
+++ b/examples_frp/ksrpc_frpc2.ipynb
@@ -1,32 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "# 合并ksrpc+frpc两阻塞代码于单Notebook\n",
-    "1. 支持子程序崩溃重新拉起\n",
-    "2. 支持空闲超时停止服务\n",
-    "3. 支持日志超长清屏"
-   ]
+   "cell_type": "markdown",
+   "source": "本计划ksrpc在主进程中运行，frpc在子进程中运行，用来解决进度条不支持实时更新的问题，但发现中断后都没由正常退出"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
     ]
    },
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "from ksrpc.run_notebook import main\n",
+    "from ksrpc.utils.process import run_command, callback\n",
     "\n",
-    "commands = {\n",
-    "    \"ksrpc\": [\"python\", \"-u\", \"-m\", \"ksrpc.run_app\"], # \"--config\", \"./config.py\"  # \"uv\", \"run\"\n",
-    "    \"frpc\": [\"./frpc\", \"-c\", \"./frpc.toml\"],\n",
-    "}\n",
-    "main(commands, idle_timeout=600, clear_count=35)"
+    "import threading\n",
+    "a = threading.Thread(target=run_command, args=([\"./frpc\", \"-c\", \"./frpc.toml\"], callback))\n",
+    "a.start()"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from ksrpc.run_app import main\n",
+    "main(\"./config.py\")"
    ]
   }
  ],
